# Public_memory_cortex

./: LICENSE  README.md  pyproject.toml
cortex_memory/: __init__.py  __main__.py  biases.py  consolidation.py  core.py  dashboard.py  decay.py  dreams.py  emotions.py  memory.py  mood.py
examples/: basic_agent.py  dreaming_agent.py
tests/: test_cortex.py
