[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex-memory"
version = "0.1.0"
description = "Persistent, human-like memory for AI agents. Remembers, forgets, dreams, and feels."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Manifesto Engine", email = "dev@manifesto-engine.com"},
]
keywords = ["ai", "memory", "agents", "cortex", "cognitive", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/manifesto-engine/cortex-memory"
Documentation = "https://github.com/manifesto-engine/cortex-memory#readme"
Issues = "https://github.com/manifesto-engine/cortex-memory/issues"

[tool.setuptools.packages.find]
include = ["cortex_memory*"]
